# sdl-base

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
android/: AndroidManifest.xml  build.gradle  gradle  gradlew  gradlew.bat
android/res/values/: strings.xml
android/src/: SdlBase.java
src/: CMakeLists.txt  main.cpp
